--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>M3 Prova PEDRO JAQUES"</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css.css">
 </head>
 <body>
     <section>
